--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,11 @@
 <h2>{{ the_title }}</h2>
 
 <form action='/login'>
-    <input type='submit' value='login'>
+    <input type='submit' value='Login'>
+</form>
+
+<form action='/create'>
+    <input type='submit' value='Create account'>
 </form>
 
 {% endblock %}
