Stores username and password inside textfile. It stores it in just text, with space seperating username and password. It then imports each line as a dictionary.

--- a/templates/create.html
+++ b/templates/create.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
             <td>
-                Letters:
+                Password:
             </td>
             <td>
                 <input name='password' type='TEXT'>
