Added the login part of the site. Removed files that I didnt use

--- a/templates/create.html
+++ b/templates/create.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method='POST' action='/status'>
+<form method='POST' action='/status_create'>
     <table>
         <p>Create account</p>
         <tr>
