--- a/templates/status_login.html
+++ b/templates/status_login.html
@@ -8,14 +8,14 @@
 {% if check %}
 
 <p>
-    Congratulations! You have added {{ username }} as a user!
+    Congratulations! You successfully logged in as {{ username }}
 </p>
 
 
 {% else %}
 
 <p>
-    Sorry, {{ username }} is already added as a user.
+    Sorry, your password did not match that of the password for {{ username }}
 </p>
 
 {% endif %}
